# gh-playground

./: Dockerfile  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: vesion-bump.yml
banger/: cmd.py  git.py  main.py
example-data/: version.py
tests/: test_utils.py
xumper/: main.py  utils.py
