[tool.poetry]
name = "Incrementor"
version = "0.1.0"
description = "Increments app version"
authors = ["Eugen Ciur <eugen@papermerge.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
packaging = "^21.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
